external user idを付与して個別のユーザーに通知を送る

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,14 @@
         OneSignal.init({
           appId: "<%= Rails.application.credentials.one_signal[:app_id] %>"
         })
+
+        OneSignal.on('subscriptionChange', function (isSubscribed) {
+          if (isSubscribed) {
+            OneSignal.setExternalUserId("<%= current_user.id %>");
+          } else {
+            OneSignal.removeExternalUserId();
+          }
+        });
       });
     </script>
   </head>
