--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,7 +3,7 @@
   アカウント設定
 </h1>
 
-<%= form_with(model: @user) do |form| %>
+<%= form_with(model: current_user) do |form| %>
   <div class="flex flex-col mb-3">
     <%= form.label '表示名(30文字以内)', class: 'mb-2 text-xs leading-none text-primary font-bold' %>
     <%= form.text_field :name, maxlength: 30, required: true %>
@@ -13,3 +13,5 @@
     <%= render(SubmitButtonComponent.new(form:, label: '保存')) %>
   </div>
 <% end %>
+
+<%= render(WithdrawButtonComponent.new(label: '退会', current_user:, class_name: 'mt-96'))%>
