フッターとプライバシーポリシーを作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,5 +23,6 @@
     <main class="max-w-md mx-auto pt-8 px-4 pb-24">
       <%= yield %>
     </main>
+    <%= render(FooterComponent.new) %>
   </body>
 </html>
