カードの内容が少ないとカードの幅が変わる問題を修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <%# TODO: flashを表示 %>
     <%# TODO: 期限が来たらWebプッシュ通知ができると尚良い %>
     <%= render(HeaderComponent.new(current_user:)) %>
-    <main class="max-w-md mx-auto pt-8 px-4 pb-24">
+    <main class="w-full max-w-md mx-auto pt-8 px-4 pb-24">
       <%= yield %>
     </main>
     <%= render(FooterComponent.new) %>
